<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>mx.randalf.quartz</groupId>
  <artifactId>RandalfQuartzCore</artifactId>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
	</properties>
	<repositories>
		<repository>
			<id>bncf</id>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>mvn-bncf</id>
			<name>mvn-bncf-releases</name>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
		</repository>
	</distributionManagement>
	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java</directory>
				<includes>
					<include>**/*.java</include>
				</includes>
			</resource>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<includes>
					<include>**/*.gwt.xml</include>
					<include>**/log4j.xml</include>
					<include>**/log4j.dtd</include>
				</includes>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.3.2</version>
		</dependency>
		<!-- 
    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>1.4.01</version>
    </dependency>
		 -->
		<dependency>
			<groupId>mx.randalf.configuration</groupId>
			<artifactId>RandalfConfiguration</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>mx.randalf.socket</groupId>
			<artifactId>RandalfSocket</artifactId>
			<version>3.0.0</version>
		</dependency>
	</dependencies>
	<parent>
		<groupId>mx.randalf.protocol</groupId>
		<artifactId>RandalfProtocol</artifactId>
		<version>1.0.1</version>
	</parent>
	<version>3.0.0</version>
</project>